@@ -1,3 +1,8 @@
+2011-02-25  Alan Modra  <amodra@gmail.com>
+
+	PR gas/12519
+	* config/obj-elf.c (elf_frob_symbol): Properly handle size expression.
+
 2011-02-01  Alan Modra  <amodra@gmail.com>
 
 	Backport from mainline
